Changed image width to 25% to check if overflow would stop

--- a/main.css
+++ b/main.css
@@ -310,7 +310,7 @@ to display as a column */
 
 .carousel img{
     justify-items: center;
-    width: 50%;
+    width: 25%;
     height: 300px;
     object-fit: cover;
     /* background-position: center; */
